# RedBallDetect

./: .gitignore  Detect.cpp  Detect.hpp  Makefile  README.md  test.cpp
Detector/: Detect.cpp  Detect.hpp  Makefile  (+5 more)
nao_version/: CMakeLists.txt  Detect.cpp  Detect.hpp  autoload.ini  main.cpp  main.hpp  njunaoModule.cpp  njunaoModule.hpp  pole.cpp  pole.hpp  qiproject.xml  readme.md  test.py  test_stop.py
nao_version/findBallModule/: ._.metadata  ._manifest.xml  behavior.xar  behavior1.xar  behavior2.xar  findball.pml  manifest.xml
nao_version/findBallModule/behavior_1/: behavior.xar
nao_version/findBallModule/close the camera/: behavior.xar
nao_version/findBallModule/find ball and pole/: behavior.xar
nao_version/findBallModule/first/: behavior.xar
nao_version/findBallModule/go straight to ball/: behavior.xar
nao_version/findBallModule/goto shoot position/: behavior.xar
nao_version/findBallModule/hhh/: behavior.xar
nao_version/findBallModule/hhhh/: behavior.xar
nao_version/findBallModule/init/: behavior.xar
nao_version/findBallModule/lastcontest/: behavior.xar
nao_version/findBallModule/saveImage/: behavior.xar
nao_version/findBallModule/second/: behavior.xar
nao_version/findBallModule/temp/: behavior.xar
naogolf/: CMakeLists.txt  algorithm_base.cpp  algorithm_base.h  config.yml  constraint_limit.cpp  constraint_limit.h  control.cpp  decision.cpp  decision_base.h  detection_base.h  fsm.cpp  fsm.h  golftest.py  image_util.cpp  image_util.h  main_interface.cpp  naogolf.h  parameter.cpp  parameter.h  qiproject.xml  util.cpp  util.h  vision.cpp
(+2 files in other folders)
